adding hello world example

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,7 +16,7 @@ main#app {
   box-sizing: border-box; // Helps keep consistent sizing
 }
 
-#hello-world {
+#examples {
   padding: 1.5rem;
   background: whitesmoke; // White background for contrast
   border-radius: 6px; // Subtle rounded corners
