--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,6 @@ main#app {
   margin-bottom: 1.5rem; // Space below the Hello World section
   h2,
   p {
-    margin: 0;
+    margin: 1rem 0;
   }
 }
