renamed several methods and classes

--- a/src/scss/03-components/meme-generator.scss
+++ b/src/scss/03-components/meme-generator.scss
@@ -11,7 +11,7 @@
 }
 
 /* The figure that holds the image and caption */
-figure.mashup {
+figure.meme {
   margin: 0;
   position: relative;
   width: 100%;
