--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -69,7 +69,8 @@ body {
       margin-left: 1rem;
       text-transform: capitalize;
 
-      &:hover, &.selected {
+      &:hover,
+      &.selected {
         color: var(--accent-color);
       }
     }
