--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @use '01-vendors/normalize.css';
 @use '02-variables/mixins.scss';
 @use '03-components/meme-generator.scss';
+@use '03-components/nesting.scss';
 /* Variables */
 :root {
   --header-height: 60px;
