--- a/src/scss/03-components/nesting.scss
+++ b/src/scss/03-components/nesting.scss
@@ -8,7 +8,7 @@
   .universe {
     background-color: palette.$Supporting-4-400;
   }
-  .child {
+  .child, .galaxy {
     background-color: palette.$Supporting-4-300;
   }
   .grandchild {
