--- a/src/scss/03-components/nesting.scss
+++ b/src/scss/03-components/nesting.scss
@@ -11,10 +11,10 @@
   .child, .galaxy {
     background-color: palette.$Supporting-4-300;
   }
-  .grandchild {
+  .solar-system {
     background-color: palette.$Supporting-4-200;
   }
-  .ggc {
+  .planet {
     background-color: palette.$Supporting-4-100;
   }
   .ggc2 {
