--- a/src/app/components/templates/todo-item.tmpl.html
+++ b/src/app/components/templates/todo-item.tmpl.html
@@ -1,34 +1,30 @@
 <div class="todo-item">
-    <p class="todo-text">{{text}}</p>
+  <p class="todo-text">{{text}}</p>
 
-    <!-- Hidden by default until editing -->
-    <input class="edit-input" type="text" style="display: none;" />
+  <!-- Hidden by default until editing -->
+  <input class="edit-input" type="text" style="display: none" />
 
-    <div class="buttons-holder">
-        <button
-                class="edit-btn"
-                data-action="edit"
-                data-todo-id="{{todoId}}"
-                data-test-id="{{vsid}}"
-        >
-            Edit
-        </button>
+  <div class="buttons-holder">
+    <button
+      class="edit-btn"
+      data-action="edit"
+      data-todo-id="{{todoId}}"
+      data-test-id="{{vsid}}"
+    >
+      Edit
+    </button>
 
-        <button
-                class="remove-btn"
-                data-action="remove"
-                data-todo-id="{{todoId}}"
-        >
-            Remove
-        </button>
+    <button class="remove-btn" data-action="remove" data-todo-id="{{todoId}}">
+      Remove
+    </button>
 
-        <button
-                class="end-edit"
-                data-action="endEdit"
-                data-todo-id="{{todoId}}"
-                style="display: none;"
-        >
-            Done
-        </button>
-    </div>
+    <button
+      class="end-edit"
+      data-action="endEdit"
+      data-todo-id="{{todoId}}"
+      style="display: none"
+    >
+      Done
+    </button>
+  </div>
 </div>
