--- a/src/scss/03-components/todo-app.scss
+++ b/src/scss/03-components/todo-app.scss
@@ -41,7 +41,7 @@
 
   .items {
     .todo-item {
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       padding: 0.75rem 0;
       border-bottom: 1px dashed #ccc;
 
@@ -53,7 +53,7 @@
       .edit-input {
         display: none;
         padding: 0.35rem 0.6rem;
-        margin: 0 .5rem .5rem 0;
+        margin: 0 0.5rem 0.5rem 0;
         border: 1px solid #ddd;
         border-radius: 4px;
         background-color: #fcfcfc;
