--- a/src/scss/03-components/nesting.scss
+++ b/src/scss/03-components/nesting.scss
@@ -7,14 +7,14 @@
 
   .reset {
     display: flex;
-    align-items: center;
-    margin-left: 1rem;
+    align-items: start;
+    //margin-left: 1rem;
     gap: 0.25rem;
     background: palette.$Primary-700;
     color: palette.$Neutral-050;
     border: none;
     border-radius: 4px;
-    padding: 0.4rem 0.75rem;
+    padding: 0.124rem 0.1275rem;
     cursor: pointer;
 
     &:hover {
@@ -32,13 +32,18 @@
 
   .title-bar {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin: 1rem;
+    width: min-content;
 
     h2 {
       flex: 1; // let the heading take all available space
       margin: 0;
-      font-size: 1.25rem;
+      font-size: 1rem;
+
+    }
+    span.material-symbols-outlined {
+     // font-size: 1.25rem;
     }
     .btn.reset {
       // the existing styling for your reset button
@@ -47,8 +52,10 @@
 
   p {
     color: #666;
-    padding: 0 0.25rem;
-    font-weight: bold;
+    padding: 0 0.125rem;
+    margin:0 0 .0625rem 0;
+    font-weight: 400;
+    font-size: .875rem;
     text-transform: capitalize;
   }
 
@@ -100,7 +107,7 @@
     flex-direction: column;
     align-items: center;
     margin: 1rem;
-    padding: 0.5rem 0 0 0;
+    padding: 0.25rem 0 0 0;
     border: 2px solid #999; /* slightly thicker to highlight each boundary */
 
     /* Add a small label to identify each level, if you like: */
@@ -116,7 +123,7 @@
       position: relative;
       display: flex;
       width: 100%;
-      height: 30px;
+      height: 20px;
       //margin-bottom: 0.25rem;
 
       .btn {
@@ -124,6 +131,7 @@
         background: palette.$Primary-700;
         width: 50%;
         border: none;
+        font-size: 1rem;
         cursor: pointer;
         &:hover {
           background: color.adjust(palette.$Primary-700, $lightness: -10%);
