formatted example for nesting page labels

--- a/src/scss/03-components/nesting.scss
+++ b/src/scss/03-components/nesting.scss
@@ -59,37 +59,48 @@
     text-transform: capitalize;
   }
 
-  /* (1) Universe level (previously root) */
-  .universe {
+  /* (1) website level (previously root) */
+  .website {
     background-color: palette.$Neutral-400;
     & > p {
       color: palette.$Neutral-075;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+
+    }
+
+    & > div.controls{
+      display: none;
     }
   }
 
-  .universe {
+  .website {
     background-color: palette.$Neutral-400;
     border: 2px solid palette.$Primary-700;
   }
-  .galaxy {
+  .page {
     background-color: palette.$Neutral-300;
     border: 1px solid palette.$Primary-700;
     & > p {
       color: palette.$Neutral-100;
     }
   }
-  .solar-system {
+  .section {
     background-color: palette.$Neutral-200;
     border: 1px dashed palette.$Primary-700;
   }
-  .planet {
+  .component {
     background-color: palette.$Neutral-100;
   }
-  .moon {
+  .widget {
     background-color: palette.$Neutral-050;
   }
 
-  .alien {
+  .cta {
+
+    p{
+      text-transform: uppercase;
+    }
     .controls {
       .btn:first-child {
         width: 100%;
@@ -119,6 +130,18 @@
     .children {
       display: flex;
     }
+    .ui-element{
+      background: #000;
+      display: flex;
+      font-size: .875rem;
+      align-items: center;
+      justify-content: center;
+      text-transform: capitalize;
+      width: 100%;
+      height: 28px;
+      background: palette.$Primary-900;
+    }
+
     .controls {
       position: relative;
       display: flex;
