--- a/src/app/components/templates/nesting-child.tmpl.html
+++ b/src/app/components/templates/nesting-child.tmpl.html
@@ -1,6 +1,6 @@
 <!--
   This template is used by NestingChildView to display:
-    1) The current 'childType' (e.g., universe, galaxy).
+    1) The current 'childType' (e.g., website, page).
     2) Two buttons to remove or add another nested child of that same type.
     3) A '.children' container where subchildren (further nested elements) are appended.
 -->
