--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,7 +32,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: Arial, sans-serif;
+  font-family: Monaco, monospace;
   background-color: var(--bg-color);
   color: var(--fg-color);
   display: flex;
