--- a/src/app/components/templates/hello-world.tmpl.html
+++ b/src/app/components/templates/hello-world.tmpl.html
@@ -1,4 +1,4 @@
 <img src="{{img}}" height="100" alt="robot-hello" />
 
 <h2>{{msg}}</h2>
-<p>This is a basic SpyneJS application.</p>
+<p>{{desc}}</p>
